--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ nursery = { level = "warn", priority = -1 }
 
 [dependencies]
 anyhow = "1.0.99"
+chumsky = "0.11.1"
+time = { version = "0.3.44", features = ["parsing"] }
+time-macros = { version = "0.2.24", features = ["formatting"] }
+strum = { version = "0.27.2", features = ["derive"] }
