Add logcat formatting and output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ nursery = { level = "warn", priority = -1 }
 [dependencies]
 anyhow = "1.0.99"
 chumsky = "0.11.1"
-time = { version = "0.3.44", features = ["parsing"] }
+time = { version = "0.3.44", features = ["parsing", "formatting"] }
 time-macros = { version = "0.2.24", features = ["formatting"] }
 strum = { version = "0.27.2", features = ["derive"] }
 regex = "1.11.3"
+lazy-regex = "3.4.2"
+colored = "3.0.0"
+nonempty-collections = "1.1.0"
+extend = "1.2.0"
